--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <header>
         <nav>
-            <a href="">Skills</a>
-            <a href="">Projetos</a>
-            <a href="">Sobre</a>
-            <a href="">Contato</a>
+            <a href="">SKILLS</a>
+            <a href="">PROJETOS</a>
+            <a href="">SOBRE</a>
+            <a href="">CONTATO</a>
             <a id="button" href="">Download CV</a>
         </nav>
     </header>
