Cria secao titulo

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <a href="">SKILLS</a>
             <a href="">PROJETOS</a>
             <a href="">SOBRE</a>
-            <a href="">CONTATO</a>
+            <a href="">CONTATOS</a>
             <a id="button" href="">Download CV</a>
         </nav>
     </header>
-    <div>
+    <div class="secao-titulo">
         <h1>Juan Fernandes</h1>
-        <h2>developer</h2>
+        <h2>Developer</h2>
     </div>
     <div>
         <button>Contatos</button>
