--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <a href="">PROJETOS</a>
             <a href="">SOBRE</a>
             <a href="">CONTATOS</a>
-            <a id="button" href="">Download CV</a>
+            <a class="button" href="">Download CV</a>
         </nav>
     </header>
     <div class="secao-titulo">
         <h1>Juan Fernandes</h1>
         <h2>Developer</h2>
     </div>
-    <div>
-        <button>Contatos</button>
-        <button>Download CV</button>
+    <div class="secao-buttons">
+        <button class="button">Contatos</button>
+        <button class="button">Download CV</button>
     </div>
 
 
