--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 
-<body>
+<body class="background">
     <header>
         <nav>
             <a href="">SKILLS</a>
@@ -32,6 +32,8 @@
         <button class="button">Contatos</button>
         <button class="button">Download CV</button>
     </div>
+
+    
 
 
 
