Create the subtitle component

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/subtitle.css">
 </head>
 
 <body class="background">
@@ -27,7 +28,7 @@
     </header>
     <div class="secao-titulo">
         <h1>Juan Fernandes</h1>
-        <h2>Developer</h2>
+        <h2>Software Developer</h2>
     </div>
     <div class="secao-buttons">
         <button class="button">Contatos</button>
