--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
 </head>
 
 <body class="background">
@@ -26,10 +27,12 @@
             <a class="button" href="">Download CV</a>
         </nav>
     </header>
-    <div class="secao-titulo">
+
+    <div id="box">
         <h1>Juan Fernandes</h1>
         <h2>Software Developer</h2>
     </div>
+
     <div class="secao-buttons">
         <button class="button">Contatos</button>
         <button class="button">Download CV</button>
