--- a/index.html
+++ b/index.html
@@ -15,27 +15,30 @@
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
+    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/header.css">
 </head>
 
 <body class="background">
-    <header>
+    <header class="header">
         <nav>
-            <a href="">SKILLS</a>
-            <a href="">PROJETOS</a>
-            <a href="">SOBRE</a>
-            <a href="">CONTATOS</a>
+            <a class="action" href="">SKILLS</a>
+            <a class="action" href="">PROJETOS</a>
+            <a class="action" href="">SOBRE</a>
+            <a class="action" href="">CONTATOS</a>
             <a class="button" href="">Download CV</a>
         </nav>
     </header>
 
-    <div id="box">
-        <h1>Juan Fernandes</h1>
-        <h2>Software Developer</h2>
+    <div class="box">
+        <h1 class="title">Juan Fernandes</h1>
+        <h2 class="subtitle">Software Developer</h2>
     </div>
 
     <div class="secao-buttons">
-        <button class="button">Contatos</button>
-        <button class="button">Download CV</button>
+        <a class="button">Contatos</a>
+        <a class="button" lang="en">Download CV</a>
     </div>
 
     
