--- a/index.html
+++ b/index.html
@@ -11,37 +11,44 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/banner.css">
 </head>
 
 <body class="background">
-    <header class="header">
-        <nav>
-            <a class="action" href="">SKILLS</a>
-            <a class="action" href="">PROJETOS</a>
-            <a class="action" href="">SOBRE</a>
-            <a class="action" href="">CONTATOS</a>
-            <a class="button" href="">Download CV</a>
-        </nav>
-    </header>
 
-    <div class="box">
-        <h1 class="title">Juan Fernandes</h1>
-        <h2 class="subtitle">Software Developer</h2>
-    </div>
 
-    <div class="secao-buttons">
-        <a class="button">Contatos</a>
-        <a class="button" lang="en">Download CV</a>
-    </div>
+    <section class="banner">
+        <header class="header">
+            <nav>
+                <a class="action" href="">SKILLS</a>
+                <a class="action" href="">PROJETOS</a>
+                <a class="action" href="">SOBRE</a>
+                <a class="action" href="">CONTATOS</a>
+            </nav>
+        </header>
 
-    
+        <div class="box">
+            <div class="wrapper">
+                <div class="box">
+                    <h1 class="title">Juan Fernandes</h1>
+                    <h2 class="subtitle">Software Developer</h2>
+                </div>
+
+                <div class="navigation">
+                    <a class="button">Contatos</a>
+                    <a class="button" lang="en">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 
 
