--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
+    
+    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
-    <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/action.css">
-    <link rel="stylesheet" href="css/components/header.css">
-    <link rel="stylesheet" href="css/components/banner.css">
+
 </head>
 
 <body class="background">
@@ -48,9 +51,9 @@
             </div>
         </div>
     </section>
-
-
-
+    <section class="section">
+        <h2 class="title -second">Skills</h2>
+    </section>
 
 
 </body>
